[project]
name = "comfyui-q-align"
description = "Nodes:Q-Align Scoring. Implementation of [a/Q-Align](https://arxiv.org/abs/2312.17090) for ComfyUI"
version = "1.0.0"
license = "LICENSE"
dependencies = ["git+https://github.com/Q-Future/Q-Align.git@main"]

[project.urls]
Repository = "https://github.com/ZHO-ZHO-ZHO/ComfyUI-Q-Align"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Q-Align"
Icon = ""
